swapped about image

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -113,7 +113,7 @@
     "title": "Who we are",
     "story": {
       "title": "Our story",
-      "description": "Welcome to Techn9, we are passionate about harnessing the power of artificial intelligence to revolutionize the way businesses operate. Founded on the belief that technology should empower organizations to achieve their goals more efficiently and effectively, we specialize in delivering cutting-edge AI automation solutions tailored to the unique needs of our clients."
+      "description": "Welcome to Techn9! We believe that artificial intelligence and automation should be accessible, practical, and transformative for businesses of all sizes. Our goal is to help organizations streamline operations, boost efficiency, and unlock new opportunities with AI-powered solutions tailored to their unique needs. Whether you're looking to automate routine tasks or enhance decision-making with smart technology, we're here to make AI work for you—without the complexity. Let's build a smarter, more efficient future together."
     }
   },
   "contact": {
