--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -113,7 +113,7 @@
     "title": "Qui nous sommes",
     "story": {
       "title": "Notre histoire",
-      "description": "Bienvenue chez Techn9, nous sommes passionnés par l'exploitation de la puissance de l'intelligence artificielle pour révolutionner la façon dont les entreprises fonctionnent. Fondés sur la conviction que la technologie devrait permettre aux organisations d'atteindre leurs objectifs plus efficacement, nous nous spécialisons dans la fourniture de solutions d'automatisation d'IA de pointe adaptées aux besoins uniques de nos clients."
+      "description": "Bienvenue chez Techn9 ! Nous croyons que l'intelligence artificielle et l'automatisation doivent être accessibles, concrètes et porteuses de transformation pour les entreprises de toutes tailles. Notre mission est d'aider les organisations à optimiser leurs opérations, gagner en efficacité et saisir de nouvelles opportunités grâce à des solutions sur mesure. Que ce soit pour automatiser des tâches répétitives ou améliorer la prise de décision avec des technologies intelligentes, nous simplifions l'IA pour qu'elle travaille à votre avantage. Construisons ensemble un avenir plus performant et innovant."
     }
   },
   "contact": {
